<resources>
    <string name="app_name">Shop Local</string>
    <string name="MainHeader">Wilkommen!</string>
    <string name="productCategory">Produktkategorie</string>
    <string name="CompanyType">Betriebsart</string>
    <string name="Organisation">Organisationen</string>
    <string name="open">Geöffnet</string>
    <string name="desiredOpeningTime">Gewünschte Öffnungszeiten</string>
    <string name="Delivering">Liefert</string>
    <string name="Producer">Erzeuger</string>
    <string name="Shop">Verkäufer</string>
    <string name="Mart">Wochenmarkt</string>
    <string name="Vegetables">Gemüse</string>
    <string name="Fruits">Früchte</string>
    <string name="Meat">Fleisch</string>
    <string name="Meatproducts">Fleischprodukte</string>
    <string name="Cereals">Getreide</string>
    <string name="Milk">Milch</string>
    <string name="Milkproducts">Milchprodukte</string>
    <string name="Eggs">Eier</string>
    <string name="Honey">Honig</string>
    <string name="Beverages">Getränke</string>
    <string name="Bakedgoods">Backwaren</string>
    <string name="Pasta">Teigwaren</string>
    <string name="owner">Inhaber: </string>
    <string name="raw">Roh</string>
    <string name="notRaw">nicht Roh</string>
    <string name="Spring">Frühling</string>
    <string name="Summer">Sommer</string>
    <string name="Autumn">Herbst</string>
    <string name="Winter">Winter</string>
    <string name="Monday">Montag</string>
    <string name="Tuesday">Dienstag</string>
    <string name="Wednesday">Mittwoch</string>
    <string name="Thursday">Donnerstag</string>
    <string name="Friday">Freitag</string>
    <string name="Saturday">Samstag</string>
    <string name="Sunday">Sonntag</string>
    <string name="Apply">Anwenden</string>
    <string name="Reset">Zurücksetzen</string>
    <string name="CompanyName">Name des Betriebs</string>
    <string name="OwnerName">Name des Besitzers</string>
    <string name="Address">Addresse</string>
    <string name="Description">Beschreibung des Betriebs</string>
    <string name="ProductDescription">Beschreibung der Produktpalette</string>
    <string name="ProductGroup">Schlagworte der Produktgruppen</string>
    <string name="OpeningHoursComments">Anmerkungen zu den Öffnungszeiten</string>
    <string name="Messages">Nachrichten des Betriebs</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Hotel">Hotel</string>
    <string name="Search">Suchen</string>
    <string name="Settings">Einstellungen</string>
    <string name="Filter">Filter</string>
    <string name="NumberOfResults">Anzahl gefundener Unternehmen:</string>
    <string name="Language">Sprache</string>
    <string name="Favorite">Favorit</string>
    <string name="MyLocation">Mein Standort</string>
    <string name="SelectLocation">Wähle Standort aus:</string>
    <string name="or">oder:</string>
    <string name="ZIP">Postleitzahl</string>
    <string name="City">Stadt</string>
    <string name="Street">Straße (optional)</string>
    <string name="NoLocation">Kein Standort</string>
    <string name="Circuit">Im Umkreis von:</string>
    <string name="inKilometers">in Kilometern</string>
    <string name="NoCircuit">Kein Umkreis</string>
    <string name="PermissionNedded">Die App benötigt eine Erlaubnis deinen Standort zu verwenden</string>
    <string name="LocationSet">Standort gesetzt</string>
    <string name="useAddress">Standord der Adresse</string>
    <string name="LocationReset">Standort zurückgesetzt</string>
    <string name="AddressUnCompleted">Unvollständige Adresse</string>
    <string name="whatToBuy">Was gibt es hier?</string>
    <string name="Address2">Adresse: </string>
    <string name="OpeningHours">Öffnungszeiten</string>
    <string name="CircuitNotLongEnough">Der Umkreis muss größer als 1km sein</string>
    <string name="NoCircuitGiven">Keinen Umkreis angegeben</string>
    <string name="NoLocationParameters">Kein Standort oder Umkreis angegeben</string>
    <string name="Nearby">In der Nähe</string>
</resources>