<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".View.CompanyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="680dp"
            android:background="#8BC34A"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="44dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainHeaderLayout" />

        <TextView
            android:id="@+id/companyAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Address2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyName" />

        <TextView
            android:id="@+id/companyOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/owner"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyAdress" />

        <TextView
            android:id="@+id/companyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyAdress" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productGroups"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="add"
            app:barrierMargin="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyDescription" />

        <ListView
            android:id="@+id/companyTypes"
            android:layout_width="147dp"
            android:layout_height="19dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/openingHours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/companyName"
            app:layout_constraintTop_toBottomOf="@+id/mainHeaderLayout"
            app:layout_constraintVertical_bias="0.232" />

        <ListView
            android:id="@+id/companyOrganisations"
            android:layout_width="150dp"
            android:layout_height="97dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openingHoursComments" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/openingHours"
            android:layout_width="150dp"
            android:layout_height="159dp"
            android:layout_marginEnd="16dp"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/productGroups"
            app:layout_constraintTop_toTopOf="@+id/productGroups" />

        <TextView
            android:id="@+id/openingHoursComments"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openingHours" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productGroups" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/whatToBuy"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/productGroups"
            app:layout_constraintEnd_toStartOf="@+id/companyTypes"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyOwner"
            app:layout_constraintVertical_bias="0.652" />

        <TextView
            android:id="@+id/openingHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpeningHours"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/openingHours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.632"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/companyTypes"
            app:layout_constraintVertical_bias="0.838" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProductDescription"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/productDescription"
            app:layout_constraintEnd_toStartOf="@+id/companyOrganisations"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productGroups"
            app:layout_constraintVertical_bias="0.817" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@+id/companyAdress"
            app:layout_constraintEnd_toStartOf="@+id/companyName"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.238"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>